--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,7 @@ stages:
 
     - task: AzureCLI@2
       inputs:
-        azureSubscription: 'terraform.yml''
+        azureSubscription: 'Azure subscription 1'
         scriptType: 'bash'
         scriptLocation: 'inlineScript'
         workingDirectory: 'environments/dev'
