Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,7 +29,8 @@ stages:
         azureSubscription: 'Azure subscription 1'
         scriptType: 'bash'
         scriptLocation: 'inlineScript'
-        workingDirectory: 'environments/dev'
+        workingDirectory: '$(System.DefaultWorkingDirectory)/ZELECTRIC/environments/dev'
+
         inlineScript: |
           terraform init -backend-config="resource_group_name=$(backend_rg)" \
                          -backend-config="storage_account_name=$(backend_storage)" \
