--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,3 +1,18 @@
+trigger:
+  branches:
+    include:
+      - main
+      - dev
+
+variables:
+  backend_rg: dontestingrg
+  backend_storage: dontestingstorageacct
+  container_name: tfstate
+  tf_version: '1.5.7' # This variable is now unused, but kept for context
+
+pool:
+  vmImage: 'ubuntu-latest'
+
 stages:
 - stage: Terraform_Dev_Plan
   displayName: "Terraform Plan - Dev"
@@ -6,7 +21,7 @@ stages:
     steps:
     - task: TerraformInstaller@1
       inputs:
-        terraformVersion: '$(tf_version)'
+        terraformVersion: '1.5.7' # HARDCODED HERE
       displayName: 'Install Terraform CLI for Plan'
 
     - task: AzureCLI@2
@@ -34,19 +49,19 @@ stages:
   displayName: "Terraform Apply - Dev"
   dependsOn: Terraform_Dev_Plan
   condition: succeeded()
+
   jobs:
   - job: apply
     steps:
     - task: TerraformInstaller@1
       inputs:
-        terraformVersion: '$(tf_version)'
+        terraformVersion: '1.5.7' # HARDCODED HERE
       displayName: 'Install Terraform CLI for Apply'
 
-    # CORRECTED SECTION: Use DownloadPipelineArtifact@2 with targetPath
     - task: DownloadPipelineArtifact@2
       inputs:
-        artifactName: 'TerraformPlan' # Name of the artifact published in the Plan stage
-        targetPath: '$(System.DefaultWorkingDirectory)/ZELECTRIC/environments/dev' # This is where it will be downloaded
+        artifactName: 'TerraformPlan'
+        targetPath: '$(System.DefaultWorkingDirectory)/ZELECTRIC/environments/dev'
       displayName: 'Download Terraform Plan Artifact'
 
     - task: AzureCLI@2
@@ -63,5 +78,5 @@ stages:
                          -backend-config="key=dev.terraform.tfstate"
 
           echo "Applying Terraform plan..."
-          terraform apply -auto-approve tfplan # This will use the downloaded tfplan artifact
+          terraform apply -auto-approve tfplan
       displayName: 'Terraform Apply'
